--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Tic Tac Toe</title>
 </head>
 <body>
-    <script src="script.js"></script>
+  <div id="game-board">
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+    <div class="cell" data-cell=""></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
