--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
+    <div id="players">
+        <input type="text" id="player1Name" placeholder="Player 1 Name">
+        <input type="text" id="player2Name" placeholder="Player 2 Name">
+        <button id="startButton">Start Game</button>
+    </div>
+
   <div id="game-board">
     <div class="cell" data-cell=""></div>
     <div class="cell" data-cell=""></div>
@@ -18,6 +24,8 @@
     <div class="cell" data-cell=""></div>
     <div class="cell" data-cell=""></div>
   </div>
+  
+  <div id="message"></div>
   <script src="script.js"></script>
 </body>
 </html>
